replace control toggle for printing with css media query

--- a/calendar.html
+++ b/calendar.html
@@ -13,6 +13,15 @@
 			--between-weeks: 0.7em;
 		}
 
+		@media print {
+			body {
+				padding-right: 3em;
+			}
+			#controls {
+				display: none;
+			}
+		}
+
 		body {
 			font-family: Calibri, 'Trebuchet MS', sans-serif;
 		}
@@ -84,7 +93,6 @@
 		}
 
 		#controls {
-			display: none;
 			width: 24em;
 			border: 1px solid black;
 			margin: 2em 0 0 2em;
@@ -269,15 +277,6 @@
 				}
 			}
 		}
-		
-		function toggleControls() {
-			var controlsEl = document.getElementById("controls");
-			if (controlsEl.style.display == "block") {
-				controlsEl.style.display = "none";
-			} else {
-				controlsEl.style.display = "block";
-			}
-		}
 
 		// Live update for title text
 		function updateTitle() {
@@ -343,7 +342,7 @@
 	</script>
 </head>
 <body onload="initialize();">
-	<table onclick="toggleControls();">
+	<table>
 		<tr>
 			<td>
 				<table id="header">
@@ -384,7 +383,7 @@
 		<form>
 			<p>
 				<label>Title:</label>
-				<input type="text" id="titleInput" value="Title - Click to show controls" oninput="updateTitle();" />
+				<input type="text" id="titleInput" value="Title" oninput="updateTitle();" />
 			</p>
 			<p>
 				<label>Start Date:</label>
