--- a/calendar.html
+++ b/calendar.html
@@ -17,7 +17,7 @@
 			body {
 				padding-right: 3em;
 			}
-			#controls {
+			#settings {
 				display: none;
 			}
 		}
@@ -92,30 +92,30 @@
 			background-color: black;
 		}
 
-		#controls {
+		#settings {
 			width: 24em;
 			border: 1px solid black;
 			margin: 2em 0 0 2em;
 			padding: 1em;
 		}
-		#controls h1 {
+		#settings h1 {
 			font-size: 14pt;
 			margin: 0 0 0.2em 0;
 		}
-		#controls form {
+		#settings form {
 			display: table;
 		}
-		#controls p {
+		#settings p {
 			display: table-row;
 		}
-		#controls label, #controls input {
+		#settings label, #settings input {
 			display: table-cell;
 			margin-bottom: 0.3em;
 		}
-		#controls select, #controls input {
+		#settings select, #settings input {
 			padding: 0.2em;
 		}
-		#controls label {
+		#settings label {
 			text-align: right;
 			padding-right: 0.5em;
 		}
@@ -378,8 +378,8 @@
 			</td>
 		</tr>
 	</table>
-	<div id="controls">
-		<h1>Controls</h1>
+	<div id="settings">
+		<h1>Settings</h1>
 		<form>
 			<p>
 				<label>Title:</label>
